# lognosis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lognosis.xcodeproj/: project.pbxproj
lognosis.xcodeproj/xcshareddata/xcschemes/: lib-lognosis.xcscheme
src/lognosis/: Logger.cpp  Logger.h  loguru.cpp
